eks/modules/network/route_tables.tf
resource "aws_route_table" "main" {
  vpc_id = "${aws_vpc.main.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.main.id}"
  }

  tags = {
    Name = "${var.cluster_name}"
  }
}

resource "aws_route_table_association" "main" {
  count = "${var.subnet_count}"
  //count                = "${length(var.address_prefixes)}"

  subnet_id      = "${aws_subnet.main.*.id[count.index]}"
  route_table_id = "${aws_route_table.main.id}"
}
